Give the platform owner a console, and drop the second theme
The account that runs LearnX had one sidebar entry, "Platform", behind which
four unrelated screens hid in local state. None of them could be linked to,
none survived a reload, and the dashboard's "Triage" button promised bug
reports and delivered the university list. Each screen is now its own
destination at /platform?view=..., named in the sidebar the way the
administration screens already are.

Three things the role was described as doing, it could not do:

Seeing who is on a campus. The console showed a university's name and its
administrator's address and nothing else; the only account data reachable at
all was an unpaginated cross-tenant dump that nothing called. A university now
opens on its roll, filtered by role with live counts. Read-only on purpose --
approving and placing accounts stays with that university's own administrator,
who is the one who knows whether a name belongs there.

Reading bug reports. The table existed and could never fill: nothing in the
frontend posted to /api/bugs/report. Every signed-in role can now file one
from the sidebar footer. Who filed it is taken from the session rather than
the request body, which is what made it possible to file a report under
somebody else's name, and the screen it was filed from travels with it.

Choosing who gets an email. The broadcast could only reach every account on
every campus, because the frontend never sent the recipient filter the server
already accepted. It now picks a university and a role and shows the resulting
headcount on the button. The endpoint no longer takes a list of addresses from
the client: that turned the application's SMTP credentials into a way to send
arbitrary mail to arbitrary strangers.

Also here: a platform owner is no longer asked for their batch, semester and
section by a profile form whose changes need an administrator they do not
have; /api/master/profile/update, previously dead code, now backs that screen
